virtual-services/gateway.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: general-gateway
  namespace: istio-system
  labels:
    app.kubernetes.io/instance: ingressgateway
    #app: ingressgateway
    istio: ingressgateway
    app: istio-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
  #   tls:
  #     httpsRedirect: true
  # - hosts:
  #   - '*'
  #   port:
  #     name: https
  #     number: 443
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: gateway-certs 

    
# ---
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: istio
# spec:
#   controller: istio.io/ingress-controller
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   namespace: default
# spec:
#   ingressClassName: istio
#   rules:
#   - host: 'nginx.cloud.fredgentech.com'
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx
#             port: 
#               number: 80
